namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-auth-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-auth-prod
  labels:
    component: "hmpps-auth-prod"
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-auth"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-auth.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-auth-audit-registers"
    cloud-platform.justice.gov.uk/team-name: "hmpps-auth-audit-registers"
